# qa-cloud-backend

./: .dockerignore  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  .style.yapf  Dockerfile  Pipfile  README.md  config.ini  config.ini.temp  config.toml  gunicorn.conf  main.py  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  server.sh  setup.py  uwsgi.ini  yapf_style.cfg
app/: __init__.py  command.py  config.py  database.py  extension.py  hook.py
app/common/: __init__.py  enums.py  exceptions.py  flask_helper.py  global_variables.py  globals.py  id_generator.py  identity.py  locals.py  logger.py  parser.py  request.py  response.py  validator.py
app/common/decorators/: classproperty.py  require.py  service.py  transaction.py
app/common/helpers/: __init__.py  global_helper.py  sqlalchemy_helper.py
app/file/: __init__.py  controller.py  dao.py  model.py  models.py  service.py  services.py
app/modules/: __init__.py
app/modules/filecenter/: __init__.py  controller.py  dao.py
app/modules/opencenter/: __init__.py  enum.py  model.py
app/modules/public/: enum.py  model.py
app/modules/schedule/: __init__.py  decorator.py  enum.py  event.py  model.py
app/modules/script/: enum.py  model.py  types.py
app/modules/system/: __init__.py  model.py
app/modules/usercenter/: __init__.py  model.py
app/openapi/: __init__.py
app/openapi/scriptcenter/: __init__.py
app/openapi/testing/: __init__.py
app/opencenter/: __init__.py  enum.py
app/opencenter/controller/: __init__.py  application_controller.py
app/opencenter/dao/: __init__.py  open_api_log_dao.py  third_party_application_dao.py
app/opencenter/service/: __init__.py  application_service.py
app/openplatform/: __init__.py  model.py
app/openplatform/controller/: __init__.py  tpa_controller.py
app/openplatform/dao/: open_api_log_dao.py  third_party_application_dao.py
app/openplatform/service/: __init__.py  tpa_service.py
app/public/: __init__.py  enum.py  model.py
app/public/controller/: __init__.py  message_controller.py  notification_controller.py  tag_controller.py  workspace_controller.py  workspace_restriction_controller.py  workspace_user_controller.py
app/public/dao/: notification_robot_dao.py  tag_dao.py  workspace_dao.py  workspace_restricted_exemption_dao.py  workspace_restriction_dao.py  workspace_restriction_exemption_dao.py  workspace_user_dao.py  workspace_user_rel_dao.py
app/public/service/: message_service.py  notification_service.py  tag_service.py  workspace_restriction_service.py  workspace_service.py  workspace_user_service.py
app/schedule/: __init__.py  enum.py  event.py  model.py
app/schedule/controller/: __init__.py  job_controller.py  task_controller.py
app/schedule/dao/: __init__.py  schedule_job_dao.py
app/schedule/service/: __init__.py  job_service.py  task_function.py  task_service.py
app/script/: __init__.py  enum.py  enums.py  model.py  models.py
app/script/controller/: __init__.py  action_controller.py  database_controller.py  element_controller.py  element_package_controller.py  env_var_controller.py  environment_controller.py  execution_controller.py  headers_controller.py  http_header_controller.py  report_controller.py  test_controller.py  testplan_controller.py  variables_controller.py
app/script/controllers/: __init__.py  element_controller.py  element_package_controller.py  env_var_controller.py  execution_controller.py  test_controller.py  (+3 more)
app/signals/: __init__.py  element_reveiver.py  openapi_receiver.py  openapi_subscriber.py  script_reveiver.py  system_receiver.py  system_subscriber.py
app/socket/: __init__.py  public_controller.py  script_execution_controller.py
app/socketx/: __init__.py  default_handler.py  handler.py  io.py  public_controller.py  pymeter_handler.py  script_execution_controller.py
app/system/: __init__.py  controllers.py  enum.py  model.py  models.py  services.py
app/tools/: __init__.py  auth.py  cache.py  enums.py  exceptions.py  globals.py  http_client.py  identity.py  locals.py  localvars.py  logger.py  parser.py  request.py  require.py  response.py  security.py  service.py  validator.py
app/user/: __init__.py  enum.py  model.py  models.py
app/usercenter/: enum.py  model.py
app/utils/: __init__.py  auth.py  config.py  file_util.py  flask_util.py  json_util.py  jwt_util.py  log_util.py  number_util.py  randoms.py  rsa_util.py  security.py  snowflake.py  sqlalchemy_util.py  time_util.py  webhook_util.py
doc/: RESTful-API.md  database-er.pdman.json  git-commit-standard.md  platform-outline.xmind  restful-api.md  sqlalchemy.md  数据库ER图.json
resources/: config.template.ini
server/: __init__.py  app.py  command.py  commands.py  database.py  extension.py  extensions.py  hook.py  hooks.py
server/common/: __init__.py  decorators.py  enums.py  exception.py  id_generator.py  number_generator.py  parser.py  request.py  response.py  sequence.py  status.py  validator.py  verification.py  verify.py
server/file/: __init__.py  controller.py  route.py  service.py
server/interface/: __init__.py  model.py  route.py  service.py
server/librarys/: __init__.py  decorators.py  exception.py  global_helper.py  parser.py  response.py  sequence.py  sqlalchemy_helper.py  verify.py
server/libs/: decorators.py  exception.py  parser.py  request.py  response.py  sequence.py
server/script/: __init__.py  enumeration.py  model.py  models.py  route.py
server/socket/: __init__.py  public_controller.py  script_execution_controller.py
server/system/: __init__.py  controllers.py  model.py  models.py  route.py  service.py  services.py
server/user/: __init__.py  auth.py  enumeration.py  model.py  models.py  route.py  service.py
server/utils/: __init__.py  auth.py  config.py  file_util.py  json_util.py  jwt_util.py  log_util.py  number_util.py  object_util.py  randoms.py  rsa_util.py  security.py  snowflake.py  snowflake_util.py  time_util.py  token_util.py
sql/: ddl.sql
sql/ddl/: init.sql
test/: base_test.py  flask_test.py
test/server/: __init__.py
tests/: base_test.py  debug_test.py  flask_test.py
(+395 files in other folders)
