[tool.poetry]
name = "qa-cloud-backend"
version = "0.1.0"
description = ""
authors = ["Kelvin.Ye <testmankelvin@163.com>"]
packages = [
    {include = "app"}
]

# https://pypi.org/classifiers/
#classifiers = [
#    ""
#]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.8"
# flask
flask = "2.3.2"
flask-sqlalchemy = "3.0.5"
flask-socketio = "5.3.4"
flask-migrate = "4.0.4"
flask-apscheduler = "1.12.4"
# job
apscheduler = "3.10.1"
# signal
blinker = "1.6.2"
# id
ulid-py = "1.1.0"
# encryption
pyjwt = "2.7.0"
# Environment
python-dotenv = "1.0.0"
environs = "9.5.0"
# config
tomli = "2.0.1"
# 私仓依赖
pymeter = { path = "../pymeter", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-html = "*"
types-orjson = "*"
ruff = "*"
yapf = "*"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 120
src = ["app"]
select = [
    "F",    # pyflakes
    "UP",   # pyupgrade
    "E",    # pycodestyle-error
    "W",    # pycodestyle-warning
    "D",    # pydocstyle
    "I",    # isort
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D415"
]
exclude = [
    "__pycache__/",
    ".cache/",
    ".git/",
    "*.log"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-local-folder = ["app"]
force-single-line = true
lines-after-imports = 2
lines-between-types = 1

[tool.yapf]
column_limit = 120
indent_width = 4
arithmetic_precedence_indication = true
blank_line_before_nested_class_or_def = true
blank_lines_between_top_level_imports_and_variables = 2
coalesce_brackets = true
dedent_closing_brackets = true
join_multiple_lines = true
spaces_before_comment = 2
split_before_dot = true
